syntax = "proto3";

message StreetEasyAnnotation {
  string name = 1;
  int32 price_usd = 2;
  uint64 hash = 3;
}
